fix: adjust button color for better readability

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -52,11 +52,11 @@ body {
 
 .general-button {
     display: block;
-    background: #47af67;
+    background: #ffffff;
     color: black;
-    border: 2px solid #29d66b;
+    /* border: 2px solid #29d66b; */
     border-radius: 8px;
-    padding: 15px;
+    padding: 8px;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
